--- a/about-page.html
+++ b/about-page.html
@@ -48,14 +48,6 @@
                         <span class = "logo-link-text">
                             Willow's Reef
                         </span>
-                        
-                        <!--
-                        <picture>
-                            <source media = "(min-width: 992px)" srcset = "images/png/placeholder-logo-2.png"> 
-                            <source media = "" srcset = "images/png/placeholder-logo-2-m.png">
-                            <img src = "images/png/placeholder-logo-2.png" alt = "Willow's Reef Logo" id = "siteLogo"> 
-                        </picture>
-                        -->
                     </a>
 
                     <button class = "hamburger navbar-toggler" type = "button" data-bs-toggle = "collapse" data-bs-target = "#mobileNav" aria-controls = "mobileNav" aria-expanded = "false" aria-label = "Toggle mobile navigation">
@@ -76,9 +68,22 @@
                             <li class = "nav-item">
                                 <a class = "nav-link" href = "/Willows-Reef-Mock-Up/stores-page.html"> Stores </a>
                             </li>
-                            <li class = "nav-item">
-                                <a class = "nav-link" href = "#"> Media </a>
-                            </li>
+                            <span class = "dropdown">
+                                <button class = "dropdown-toggle" type = "button" id = "mediaTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
+                                    Media 
+                                </button>
+                                <ul class = "dropdown-menu" aria-labelledby = "mediaTab">
+                                    <li class = "nav-item">
+                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/blog.html" id = "mediaTab"> Blog </a>
+                                    </li>
+                                    <li class = "nav-item">
+                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/community-images.html" id = "mediaTab"> Community Images </a>
+                                    </li>
+                                    <li class = "nav-item">
+                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/feeding-vids.html" id = "mediaTab"> Feeding Videos </a>
+                                    </li>
+                                </ul>
+                            </span>
                             <li class = "nav-item">
                                 <a class = "nav-link" href = "/Willows-Reef-Mock-Up/about-page.html"> About Us </a>
                             </li>
@@ -120,9 +125,22 @@
                             <li class = "nav-item">
                                 <a class = "nav-link" href = "/Willows-Reef-Mock-Up/stores-page.html"> Stores </a>
                             </li>
-                            <li class = "nav-item">
-                                <a class = "nav-link" href = "#"> Media </a>
-                            </li>
+                            <span class = "dropdown">
+                                <button class = "dropdown-toggle" type = "button" id = "mediaTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
+                                    Media 
+                                </button>
+                                <ul class = "dropdown-menu" aria-labelledby = "mediaTab">
+                                    <li class = "nav-item">
+                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/blog.html" id = "mediaTab"> Blog </a>
+                                    </li>
+                                    <li class = "nav-item">
+                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/community-images.html" id = "mediaTab"> Community Images </a>
+                                    </li>
+                                    <li class = "nav-item">
+                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/feeding-vids.html" id = "mediaTab"> Feeding Videos </a>
+                                    </li>
+                                </ul>
+                            </span>
                             <li class = "nav-item">
                                 <a class = "nav-link" href = "/Willows-Reef-Mock-Up/about-page.html"> About Us </a>
                             </li>
