--- a/products-page.html
+++ b/products-page.html
@@ -68,9 +68,22 @@
                             <li class = "nav-item">
                                 <a class = "nav-link" href = "/Willows-Reef-Mock-Up/stores-page.html"> Stores </a>
                             </li>
-                            <li class = "nav-item">
-                                <a class = "nav-link" href = "#"> Media </a>
-                            </li>
+                            <span class = "dropdown">
+                                <button class = "dropdown-toggle" type = "button" id = "mediaTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
+                                    Media 
+                                </button>
+                                <ul class = "dropdown-menu" aria-labelledby = "mediaTab">
+                                    <li class = "nav-item">
+                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/blog.html" id = "mediaTab"> Blog </a>
+                                    </li>
+                                    <li class = "nav-item">
+                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/community-images.html" id = "mediaTab"> Community Images </a>
+                                    </li>
+                                    <li class = "nav-item">
+                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/feeding-vids.html" id = "mediaTab"> Feeding Videos </a>
+                                    </li>
+                                </ul>
+                            </span>
                             <li class = "nav-item">
                                 <a class = "nav-link" href = "/Willows-Reef-Mock-Up/about-page.html"> About Us </a>
                             </li>
@@ -112,9 +125,22 @@
                             <li class = "nav-item">
                                 <a class = "nav-link" href = "/Willows-Reef-Mock-Up/stores-page.html"> Stores </a>
                             </li>
-                            <li class = "nav-item">
-                                <a class = "nav-link" href = "#"> Media </a>
-                            </li>
+                            <span class = "dropdown">
+                                <button class = "dropdown-toggle" type = "button" id = "mediaTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
+                                    Media 
+                                </button>
+                                <ul class = "dropdown-menu" aria-labelledby = "mediaTab">
+                                    <li class = "nav-item">
+                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/blog.html" id = "mediaTab"> Blog </a>
+                                    </li>
+                                    <li class = "nav-item">
+                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/community-images.html" id = "mediaTab"> Community Images </a>
+                                    </li>
+                                    <li class = "nav-item">
+                                        <a class = "nav-link" href = "/Willows-Reef-Mock-Up/feeding-vids.html" id = "mediaTab"> Feeding Videos </a>
+                                    </li>
+                                </ul>
+                            </span>
                             <li class = "nav-item">
                                 <a class = "nav-link" href = "/Willows-Reef-Mock-Up/about-page.html"> About Us </a>
                             </li>
