--- a/stores-page.html
+++ b/stores-page.html
@@ -46,24 +46,111 @@
             <div id = "storeSection" class = "container-fluid mt-4">
                 <h2 class = "section-header">Stores</h2>
                 <div class = "row justify-content-center text-center">
-                    <span class = "col-6 col-md-3 mt-3"><a href = "" target = _blank>Store Name</a></span>
-                    <span class = "col-6 col-md-3 mt-3"><a href = "" target = _blank>Store Name</a></span>
-                    <span class = "col-6 col-md-3 mt-3"><a href = "" target = _blank>Store Name</a></span>
-                    <span class = "col-6 col-md-3 mt-3"><a href = "" target = _blank>Store Name</a></span>
+                    <span class = "col-md-6 mt-3">
+                        <span class = "dropdown">
+                            <button class = "dropdown-toggle" type = "button" id = "amazonTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
+                                Amazon 
+                            </button>
+                            <ul class = "dropdown-menu" aria-labelledby = "amazonTab">
+                                <span class = "dropdown-header">Products Available</span>
+                                <li class = "nav-item">
+                                    <a class = "nav-link" href = "https://www.amazon.com/Coral-Feast-Powdered-Quality-Food/dp/B08M95Z64Q/ref=sr_1_1?crid=2DB1V05HEENV5&keywords=coral%2Bfeast&qid=1636048104&sprefix=coral%2Caps%2C210&sr=8-1&th=1" target = "_blank"> Coral Feast </a>
+                                </li>
+                                <li class = "nav-item">
+                                    <a class = "nav-link" href = "https://www.amazon.com/AminoFeast-Quality-Coral-Amino-Acids/dp/B08P7VL6PX/ref=sr_1_2?keywords=amino+feast&qid=1636048123&sr=8-2" target = "_blank"> AminoFeast+ </a>
+                                </li>
+                            </ul>
+                        </span>
+                        <!--<a href = "https://www.amazon.com/Coral-Feast-Powdered-Quality-Food/dp/B08M95Z64Q?th=1" target = _blank>Amazon</a>-->
+                    </span>
+                    <span class = "col-md-6 mt-3">
+                        <span class = "dropdown">
+                            <button class = "dropdown-toggle" type = "button" id = "aquaCaveTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
+                                AquaCave
+                            </button>
+                            <ul class = "dropdown-menu" aria-labelledby = "aquaCaveTab">
+                                <span class = "dropdown-header">Products Available</span>
+                                <li class = "nav-item">
+                                    <a class = "nav-link" href = "https://www.aquacave.com/coral-feast-jars.html" target = "_blank"> Coral Feast </a>
+                                </li>
+                            </ul>
+                        </span>
+                        <!--<a href = "https://www.aquacave.com/coral-feast-jars.html" target = _blank>AquaCave</a>-->
+                    </span>
                 </div>
 
                 <div class = "row justify-content-center text-center">
-                    <span class = "col-6 col-md-3 mt-3"><a href = "" target = _blank>Store Name</a></span>
-                    <span class = "col-6 col-md-3 mt-3"><a href = "" target = _blank>Store Name</a></span>
-                    <span class = "col-6 col-md-3 mt-3"><a href = "" target = _blank>Store Name</a></span>
-                    <span class = "col-6 col-md-3 mt-3"><a href = "" target = _blank>Store Name</a></span>
+                    <span class = "col-md-6 mt-3">
+                        <span class = "dropdown">
+                            <button class = "dropdown-toggle" type = "button" id = "aquariumSpecialtyTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
+                                Aquarium Specialty
+                            </button>
+                            <ul class = "dropdown-menu" aria-labelledby = "aquariumSpecialtyTab">
+                                <span class = "dropdown-header">Products Available</span>
+                                <li class = "nav-item">
+                                    <a class = "nav-link" href = "https://www.aquariumspecialty.com/willows-reef-coral-feast.html" target = "_blank"> Coral Feast </a>
+                                </li>
+                            </ul>
+                        </span>
+                        <!--<a href = "https://www.aquariumspecialty.com/willows-reef-coral-feast.html" target = _blank>Aquarium Specialty</a>-->
+                    </span>
+                    <span class = "col-md-6 mt-3">
+                        <span class = "dropdown">
+                            <button class = "dropdown-toggle" type = "button" id = "coralHubTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
+                                Coral Hub
+                            </button>
+                            <ul class = "dropdown-menu" aria-labelledby = "coralHubTab">
+                                <span class = "dropdown-header">Products Available</span>
+                                <li class = "nav-item">
+                                    <a class = "nav-link" href = "" target = "_blank"> Coral Feast </a>
+                                </li>
+                                <li class = "nav-item">
+                                    <a class = "nav-link" href = "" target = "_blank"> AminoFeast+ </a>
+                                </li>
+                                <li class = "nav-item">
+                                    <a class = "nav-link" href = "" target = "_blank"> RhodoFeast </a>
+                                </li>
+                            </ul>
+                        </span>
+                        <!--<a href = "https://www.indiefur.com/product/willows-reef-coral-feast/" target = _blank>IndieFur</a>-->
+                    </span>
                 </div>
 
                 <div class = "row justify-content-center text-center">
-                    <span class = "col-6 col-md-3 mt-3"><a href = "" target = _blank>Store Name</a></span>
-                    <span class = "col-6 col-md-3 mt-3"><a href = "" target = _blank>Store Name</a></span>
-                    <span class = "col-6 col-md-3 mt-3"><a href = "" target = _blank>Store Name</a></span>
-                    <span class = "col-6 col-md-3 mt-3"><a href = "" target = _blank>Store Name</a></span>
+                    <span class = "col-md-6 mt-3">
+                        <span class = "dropdown">
+                            <button class = "dropdown-toggle" type = "button" id = "noopsycheTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
+                                Noopsyche USA
+                            </button>
+                            <ul class = "dropdown-menu" aria-labelledby = "noopsycheTab">
+                                <span class = "dropdown-header">Products Available</span>
+                                <li class = "nav-item">
+                                    <a class = "nav-link" href = "https://noopsycheusa.com/products/coral-feast-no-filler-coral-food-60g" target = "_blank"> Coral Feast </a>
+                                </li>
+                            </ul>
+                        </span>
+                        <!--<a href = "https://noopsycheusa.com/products/coral-feast-no-filler-coral-food-60g" target = _blank>Noopsyche USA</a>-->
+                    </span>
+                    <span class = "col-md-6 mt-3">
+                        <span class = "dropdown">
+                            <button class = "dropdown-toggle" type = "button" id = "reefShackTab" data-bs-toggle = "dropdown" aria-expanded = "false"> 
+                                Reef Shack
+                            </button>
+                            <ul class = "dropdown-menu" aria-labelledby = "reefShackTab">
+                                <span class = "dropdown-header">Products Available</span>
+                                <li class = "nav-item">
+                                    <a class = "nav-link" href = "https://reefshackllc.com/products/coral-feast-powdered-coral-food-60-gm?_pos=1&_sid=9b682b3ea&_ss=r" target = "_blank"> Coral Feast </a>
+                                </li>
+                                <li class = "nav-item">
+                                    <a class = "nav-link" href = "https://reefshackllc.com/products/amino-feast-coral-food-amino-acid-250ml?_pos=1&_sid=71bb8333e&_ss=r" target = "_blank"> AminoFeast+ </a>
+                                </li>
+                                <li class = "nav-item">
+                                    <a class = "nav-link" href = "https://reefshackllc.com/products/rhodofeast-premium-direct-feed-probiotic-4oz-nitrate-phosphate-remover?_pos=2&_sid=9b682b3ea&_ss=r" target = "_blank"> RhodoFeast </a>
+                                </li>
+                            </ul>
+                        </span>
+                        <!--<a href = "https://www.glassaquaticsonline.com/copy-of-coral-feast-60g-willows.html" target = _blank>Glass Aquatics</a>-->
+                    </span>
                 </div>
             </div>
         </div>
